[tool.poetry]
name = "temperature"
version = "0.1.0"
description = ""
authors = ["github <github>"]

[tool.poetry.dependencies]
python = "^3.9.13"
pandas = "^1.5.3"
numpy = "^1.24.2"
Pillow = "^9.4.0"
plotly = "^5.13.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
